option('system_user',
        type : 'string', value : 'pulse',
        description : 'User for running the PulseAudio daemon as a system-wide instance (pulse)')
option('system_group',
        type : 'string', value : 'pulse',
        description : 'Group for running the PulseAudio daemon as a system-wide instance (pulse)')
option('access_group',
        type : 'string', value : 'pulse-access',
        description : 'Group which is allowed access to a system-wide PulseAudio daemon (pulse-access)')
option('database',
        type : 'combo', value : 'tdb',
        choices : [ 'gdbm', 'tdb', 'simple' ],
        description : 'Database backend')
option('pulsedspdir',
       type : 'string',
       description : 'Specify location where OSS wrapper will be installed')

# Optional features

option('alsa',
       type : 'feature', value : 'auto',
       description : 'Optional ALSA support')
option('avahi',
       type : 'feature', value : 'auto',
       description : 'Optional Avahi support')
option('bluez5',
       type : 'feature', value : 'auto',
       description : 'Optional BlueZ 5 support')
option('bluez5-native-headset',
       type : 'boolean',
       description : 'Optional native headset backend support (BlueZ 5)')
option('bluez5-ofono-headset',
       type : 'boolean',
       description : 'Optional oFono headset backend support (BlueZ 5)')
option('dbus',
       type : 'feature', value : 'auto',
       description : 'Optional D-Bus support')
option('fftw',
       type : 'feature', value : 'auto',
       description : 'Optional FFTW support')
option('jack',
       type : 'feature', value : 'auto',
       description : 'Optional JACK support')
option('systemd',
       type : 'feature', value : 'auto',
       description : 'Optional systemd support')
option('x11',
       type : 'feature', value : 'auto',
       description : 'Optional X11 support')
